@@ -1,3 +1,8 @@
+2003-02-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* Makefile (tests): Remove tst-basic7.  Add tst-kill1, tst-kill2,
+	tst-kill3, tst-kill4.
+
 2003-02-21  Roland McGrath  <roland@redhat.com>
 
 	* Makefile (install-lib-ldscripts): New variable.
